--- a/jogoDoBicho/Base.lproj/LaunchScreen.storyboard
+++ b/jogoDoBicho/Base.lproj/LaunchScreen.storyboard
@@ -16,8 +16,24 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgCloud" translatesAutoresizingMaskIntoConstraints="NO" id="vBF-3e-v1d">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eagleImg" translatesAutoresizingMaskIntoConstraints="NO" id="mYG-2U-IVn">
+                                <rect key="frame" x="40" y="252.66666666666663" width="313" height="347"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vBF-3e-v1d" secondAttribute="trailing" id="8bW-SY-4yy"/>
+                            <constraint firstItem="mYG-2U-IVn" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="LG4-J2-vJu"/>
+                            <constraint firstItem="vBF-3e-v1d" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Tlu-Rz-FNW"/>
+                            <constraint firstItem="mYG-2U-IVn" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="bJz-LR-QDH"/>
+                            <constraint firstAttribute="bottom" secondItem="vBF-3e-v1d" secondAttribute="bottom" id="fNP-h4-1n1"/>
+                            <constraint firstItem="vBF-3e-v1d" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lUS-YX-isr"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -26,6 +42,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bgCloud" width="393" height="852"/>
+        <image name="eagleImg" width="313" height="347"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
